# tmc_teleop

tmc_pseudo_velocity_controller/: CHANGELOG.rst  CMakeLists.txt  package.xml
tmc_pseudo_velocity_controller/src/: pseudo_velocity_controller.cpp  pseudo_velocity_controller.hpp  pseudo_velocity_controller_node_main.cpp
tmc_pseudo_velocity_controller/test/: pseudo_velocity_controller-test.cpp
